subiendo cambios en maquetación

--- a/index.html
+++ b/index.html
@@ -15,28 +15,67 @@
     <header class="navbar-fixed">
         <nav class="nav-wrapper nav-heigth grey lighten-2">
             <a class="text1">Mi Sesión</a>
-            <a class="text1 right">Salir</a>
+            <a class="text1 right margen-der">Salir</a>
         </nav>
     </header>
-         <div class="input-field col s6 m6">
-            <select>
-              <option value="" disabled selected>Mis Accesos</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
-         </div>
-         <div>
-            <img src="assets/img/logo.png">
-         </div>
-         <div class="blue-grey darken-">
-            <a class="waves-effect waves-light btn blue darken-3">Estatus</a>
-            <a class="waves-effect waves-light btn blue-grey darken-">Bitácora</a>
-            <a class="waves-effect waves-light btn blue-grey darken-">Agenda</a>
-            <a class="waves-effect waves-light btn blue-grey darken-">Imagen</a>
-             <a class="waves-effect waves-light btn blue-grey darken-">Aclaraciones</a>
-            <a class="waves-effect waves-light btn blue-grey darken-">Riesgos y Alertas</a>
-         </div>
+        <div class="container">
+
+             <div class="input-field col s6 m6">
+                <select>
+                  <option value="" disabled selected>Mis Accesos</option>
+                  <option value="1">Option 1</option>
+                  <option value="2">Option 2</option>
+                  <option value="3">Option 3</option>
+                </select>
+             </div>
+             <div>
+                <img src="https://dummyimage.com/977x135/6c6d94/fafaff.png" class="img-superior">
+             </div>
+             <div class="blue-grey darken-">
+                <a class="waves-effect waves-light btn blue darken-3 botones">Estatus</a>
+                <a class="waves-effect waves-light btn blue-grey darken- botones">Bitácora</a>
+                <a class="waves-effect waves-light btn blue-grey darken- botones">Agenda</a>
+                <a class="waves-effect waves-light btn blue-grey darken- botones">Imagen</a>
+                 <a class="waves-effect waves-light btn blue-grey darken- botones">Aclaraciones</a>
+                <a class="waves-effect waves-light btn blue-grey darken- botones">Riesgos</a>
+             </div>
+             <div>
+                <div class="row">
+                    <div class="col s4 m4">
+                        <img src="https://dummyimage.com/45x45/6c6d94/fafaff.png&text=USER" class="circle">
+                        <span>Juan G. Treviño <br></span>
+                        <span>CPC 25%<br></span>
+                        <span>z1<br></span>
+                        <label>RFC</label>
+                        <h6>MAMK908976</h6>
+                        <label>EDAD</label>
+                        <h6>36 años</h6>
+                        <label>SECTOR</label>
+                        <h6>Personas físicas</h6>
+                        <label>EJECUTIVO</label>
+                        <h6>Gloria Soledad</h6>
+                        <label>NO. DE CLIENTE</label>
+                        <h6>15624368</h6>
+                        <h2></h2>
+                        <a href="">mthurn@live.com</a>
+                        <h6>+52 1 55 87 88 32</h6>
+                        <h6>Lorem ipsum dolor sit amet, consectur adipiscing elit.
+                        <h6><a href="" class="right">Ver más canales</a></h6>
+                    </div>
+                    <div class="col s4 m4">
+                        <h6>PLAN UNO</h6>
+                        <img src="https://dummyimage.com/138x138/6c6d94/fafaff.png" class="circle">
+                        <h6>25% Crédito</h6>
+                        <h6>25% Digitales</h6>
+                        <h6>25% Capacitación</h6>
+                        <h6>25% Seguros</h6>
+                    </div>
+                    <div class="col s4 m4"></div>
+                </div>
+             </div>
+
+        </div>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
